--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/mortgage/mortgage.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/mortgage/mortgage.component.html
@@ -1,2 +1,17 @@
 <app-goal-navigation></app-goal-navigation>
-<p-card styleClass="m-2" class="mb-2" header="Mortgage Payoff"></p-card>
+<div class="d-flex justify-content-between">
+  <div class="d-flex w-100 flex-column m-2">
+    <p-card header="Mortgage">
+      <div class="mb-1">
+        <app-mortgage-entry-form></app-mortgage-entry-form>
+      </div>
+      <!--<div class="mt-1">
+    <app-mortgage-amortization-listing-form></app-mortgage-amortization-listing-form>
+  </div>-->
+    </p-card>
+  </div>
+  <div class="d-flex w-40 flex-column m-2">
+    <p-card header="Total Cost of Mortgage" class="mb-1">
+    </p-card>
+  </div>
+</div>
