--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/mortgage-entry-form/mortgage-entry-form.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/components/mortgage-entry-form/mortgage-entry-form.component.html
@@ -1,13 +1,6 @@
 <form (ngSubmit)="onSubmit(form)" #form="ngForm">
   <div class="d-flex flex-column">
     <div class="d-flex w-100 mb-1">
-      <span class="p-float-label w-100 mr-1">
-        <input pInputText id="name"
-               [required]="true"
-               [(ngModel)]="model.name" name="name"
-               #name="ngModel" class="w-100" />
-        <label for="name">Name</label>
-      </span>
       <span class="p-float-label w-100 ml-1">
         <p-inputNumber id="loanedAmount"
                        [required]="true"
@@ -28,7 +21,7 @@
       </span>
     </div>
     <div class="d-flex w-100 mt-1">
-      <span class="p-float-label w-100 mr-1">
+      <span class="p-float-label w-100 ml-1">
         <p-inputNumber id="annualInterestRate"
                        [required]="true"
                        [(ngModel)]="model.annualInterestRate" name="annualInterestRate"
