--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/goal/goal.component.html
@@ -15,6 +15,8 @@
     <p-card styleClass="m-2" class="mb-2" header="Mortgage Payoff Result">
       <app-mortgage-chart></app-mortgage-chart>
     </p-card>
-    <p-card styleClass="m-2" class="mb-2" header="Investments Result"></p-card>
+    <p-card styleClass="m-2" class="mb-2" header="Investments Result">
+      <app-investments-chart></app-investments-chart>
+    </p-card>
   </div>
 </div>
