--- a/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/debt/debt.component.html
+++ b/WhatIfBudget/WhatIfBudget.App/ClientApp/src/app/modules/goal/pages/debt/debt.component.html
@@ -1,2 +1,10 @@
 <app-goal-navigation></app-goal-navigation>
-<p-card styleClass="m-2" class="mb-2" header="Debt Payoff"></p-card>
+<div class="d-flex justify-content-between">
+  <div class="d-flex w-100 flex-column m-2">
+    <p-card header="Debts">
+      <div class="mb-1">
+        <app-debt-entry-form></app-debt-entry-form>
+      </div>
+    </p-card>
+  </div>
+</div>
